# F4-HeadshotsKillF4SE

./: .gitignore  CMakeLists.txt  HeadshotsKillF4SE.ini  README.md  vcpkg.json
config/: ammo_calibers.json
src/: ActorClassifier.cpp  ActorClassifier.h  AmmoClassifier.cpp  AmmoClassifier.h  GameDefinitions.h  HeadshotLogic.cpp  HeadshotLogic.h  HeadshotSpell.cpp  HeadshotSpell.h  HelmetHandler.cpp  HelmetHandler.h  HitEventHandler.cpp  HitEventHandler.h  HitHook.cpp  HitHook.h  LegendaryTracker.cpp  LegendaryTracker.h  Menu.cpp  Menu.h  PCH.h  PlayerFeedback.cpp  PlayerFeedback.h  Settings.cpp  Settings.h  main.cpp
tools/: ammo_dump.txt  extract_ammo.py  extract_head_armor.py  extract_imods.py
